配置文件中注释改用utf-8编码

--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,15 @@
 lane_width:
-  min: 1 # ×îÐ¡Ïß¿í
-  max: 5 # ×î´óÏß¿í
-  min_head: 6 # ×îÐ¡¼ýÍ·¿í¶È
-  max_head: 10 # ×î´ó¼ýÍ·¿í¶È
+  min: 1 # æœ€å°çº¿å®½
+  max: 5 # æœ€å¤§çº¿å®½
+  min_head: 6 # æœ€å°ç®­å¤´å®½åº¦
+  max_head: 10 # æœ€å¤§ç®­å¤´å®½åº¦
 font_size:
-  flow: 12 # Á÷Á¿±ê×¢×ÖÌå´óÐ¡
+  flow: 18 # æµé‡æ ‡æ³¨å­—ä½“å¤§å°
 color:
-  flow: 0,0,0 # Á÷Á¿±ê×¢×ÖÌåÑÕÉ«
+  flow: 0,0,0 # æµé‡æ ‡æ³¨å­—ä½“é¢œè‰²
   lane:
-    ÄÏ: '#00B050' # ÄÏÏò³µµÀÏßÑÕÉ«
-    ±±: '#FF0000' # ±±Ïò³µµÀÏßÑÕÉ«
-    Î÷: '#FFC000' # Î÷Ïò³µµÀÏßÑÕÉ«
-    ¶«: '#7030A0' # ¶«Ïò³µµÀÏßÑÕÉ«
+    å—: '#00B050' # å—å‘è½¦é“çº¿é¢œè‰²
+    åŒ—: '#FF0000' # åŒ—å‘è½¦é“çº¿é¢œè‰²
+    è¥¿: '#FFC000' # è¥¿å‘è½¦é“çº¿é¢œè‰²
+    ä¸œ: '#7030A0' # ä¸œå‘è½¦é“çº¿é¢œè‰²
 
